--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
       </div>
 
       <div class="video-area">
+	  <div class="screen-share">Compartiendo pantalla</div>
         <!-- Video principal grande (normal mode o pantalla compartida) -->
         <div class="video-main" id="videoMainContainer">
           <video id="mainVideo" autoplay></video>
