--- a/index.html
+++ b/index.html
@@ -656,10 +656,16 @@
       }
       // Oculta miniatura normal
       if (typeof miniaturaNormal !== 'undefined' && miniaturaNormal) miniaturaNormal.style.display = "none";
-      // Muestra panel de miniaturas
-      actualizarMiniaturasPanel();
+      // Mostrar u ocultar panel de miniaturas según si eres emisor o receptor
       var miniaturasPanel = document.getElementById("miniaturasPanel");
-      if (miniaturasPanel) miniaturasPanel.style.display = "flex";
+      if (screenStream && isScreenSharing) {
+        // Soy el que comparte: ocultar miniaturas
+        if (miniaturasPanel) miniaturasPanel.style.display = "none";
+      } else {
+        // Soy el receptor: mostrar miniaturas
+        actualizarMiniaturasPanel();
+        if (miniaturasPanel) miniaturasPanel.style.display = "flex";
+      }
     }
 
     function actualizarMiniaturasPanel() {
